modified directories tree

--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -215,25 +215,25 @@
     <ClCompile Include=".\root\OGL_Application\src\baseObject.cpp" />
     <ClCompile Include="root\OGL_Application\src\ApplicationObject\applicationDerivedObjectAdvanced.cpp" />
     <ClCompile Include="root\OGL_Application\src\cameraTransformations\cameraManager.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\boxAABB.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\frameofref.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\grid.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\object1.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\my_particle.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\buttons2.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\userInterface.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\buttonMap.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\buttons.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\printHelper.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\projectile.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\sphere.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\boxAABB\boxAABB.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\frameOfRef\frameofref.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\grid\grid.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\object1\object1.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\particle\my_particle.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\buttonEditObject.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\userInterface.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\buttonMap.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\buttons.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\printHelper.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\projectile\projectile.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\sphere\sphere.cpp" />
     <ClCompile Include=".\root\OGL_Application\src\external_src\gl3w.c" />
     <ClCompile Include=".\root\OGL_Application\src\external_src\sb7ktx.cpp" />
     <ClCompile Include="root\OGL_Application\src\cameraTransformations\fpcamera.cpp" />
     <ClCompile Include=".\root\OGL_Application\src\log.cpp" />
     <ClCompile Include=".\root\OGL_Application\src\main.cpp" />
     <ClCompile Include=".\root\OGL_Application\src\mymathlib.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\buttonsList.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\buttonsList.cpp" />
     <ClCompile Include="root\OGL_Application\src\Physics\AdvancedPhysics\boxSphere.cpp" />
     <ClCompile Include="root\OGL_Application\src\Physics\body.cpp" />
     <ClCompile Include="root\OGL_Application\src\Physics\collide_coarse.cpp" />
@@ -260,14 +260,14 @@
     <ClCompile Include="root\OGL_Application\src\Collectors\derivedObjectCollector.cpp" />
     <ClCompile Include="root\OGL_Application\src\Collectors\objectCollector.cpp" />
     <ClCompile Include="root\OGL_Application\src\Objects\assets.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\build_b.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\build\build_b.cpp" />
     <ClCompile Include="root\OGL_Application\src\Objects\gun.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\point.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\surface.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\UI\text.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\triangle_b.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\triangle_tb.cpp" />
-    <ClCompile Include="root\OGL_Application\src\Objects\viewfinder.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\point\point.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\surface\surface.cpp" />
+    <ClCompile Include="root\OGL_Application\src\UI\text.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\triangle\triangle_b.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\triangle_tb\triangle_tb.cpp" />
+    <ClCompile Include="root\OGL_Application\src\Objects\viewfinder\viewfinder.cpp" />
     <ClCompile Include="root\OGL_Application\src\IA.cpp" />
     <ClCompile Include="root\OGL_Application\src\input\inputCursor.cpp" />
     <ClCompile Include="root\OGL_Application\src\input\inputEditMode.cpp" />
@@ -291,38 +291,38 @@
     <ClCompile Include="root\OGL_Application\src\timing.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="root\OGL_Application\src\Objects\Shaders\grid\grid.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\grid\grid.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\object1\object1.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\object1\object1.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\particle\particle.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\particle\particle.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\projectile\projectile.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\projectile\projectile.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\sphere\sphere.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\build\build.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\build\build.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\characters\enemy\enemy.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\characters\enemy\enemy.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\characters\playercharacter\playercharacter.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\characters\playercharacter\playercharacter.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\frameOfRef\frameOfRef.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\frameOfRef\frameOfRef.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\gun_for\gun_for.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\gun_for\gun_for.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\point\point.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\point\point.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\sphere\sphere.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\surface\surface.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\surface\surface.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\text\text.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\text\text.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\triangle\triangle.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\triangle\triangle.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\triangle_tb\triangle_tb.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\triangle_tb\triangle_tb.vert" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\viewfinder\viewfinder.frag" />
-    <None Include="root\OGL_Application\src\Objects\Shaders\viewfinder\viewfinder.vert" />
+    <None Include="root\OGL_Application\src\Objects\grid\grid.frag" />
+    <None Include="root\OGL_Application\src\Objects\grid\grid.vert" />
+    <None Include="root\OGL_Application\src\Objects\object1\object1.frag" />
+    <None Include="root\OGL_Application\src\Objects\object1\object1.vert" />
+    <None Include="root\OGL_Application\src\Objects\particle\particle.frag" />
+    <None Include="root\OGL_Application\src\Objects\particle\particle.vert" />
+    <None Include="root\OGL_Application\src\Objects\projectile\projectile.frag" />
+    <None Include="root\OGL_Application\src\Objects\projectile\projectile.vert" />
+    <None Include="root\OGL_Application\src\Objects\sphere\sphere.frag" />
+    <None Include="root\OGL_Application\src\Objects\build\build.frag" />
+    <None Include="root\OGL_Application\src\Objects\build\build.vert" />
+    <None Include="root\OGL_Application\src\Objects\characters\enemy\enemy.frag" />
+    <None Include="root\OGL_Application\src\Objects\characters\enemy\enemy.vert" />
+    <None Include="root\OGL_Application\src\Objects\characters\playercharacter\playercharacter.frag" />
+    <None Include="root\OGL_Application\src\Objects\characters\playercharacter\playercharacter.vert" />
+    <None Include="root\OGL_Application\src\Objects\frameOfRef\frameOfRef.frag" />
+    <None Include="root\OGL_Application\src\Objects\frameOfRef\frameOfRef.vert" />
+    <None Include="root\OGL_Application\src\Objects\gun_for\gun_for.frag" />
+    <None Include="root\OGL_Application\src\Objects\gun_for\gun_for.vert" />
+    <None Include="root\OGL_Application\src\Objects\point\point.frag" />
+    <None Include="root\OGL_Application\src\Objects\point\point.vert" />
+    <None Include="root\OGL_Application\src\Objects\sphere\sphere.vert" />
+    <None Include="root\OGL_Application\src\Objects\surface\surface.frag" />
+    <None Include="root\OGL_Application\src\Objects\surface\surface.vert" />
+    <None Include="root\OGL_Application\src\Objects\text\text.frag" />
+    <None Include="root\OGL_Application\src\Objects\text\text.vert" />
+    <None Include="root\OGL_Application\src\Objects\triangle\triangle.frag" />
+    <None Include="root\OGL_Application\src\Objects\triangle\triangle.vert" />
+    <None Include="root\OGL_Application\src\Objects\triangle_tb\triangle_tb.frag" />
+    <None Include="root\OGL_Application\src\Objects\triangle_tb\triangle_tb.vert" />
+    <None Include="root\OGL_Application\src\Objects\viewfinder\viewfinder.frag" />
+    <None Include="root\OGL_Application\src\Objects\viewfinder\viewfinder.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
