--- a/OGL_Application.vcxproj.filters
+++ b/OGL_Application.vcxproj.filters
@@ -231,9 +231,6 @@
     <ClInclude Include="root\OGL_Application\include\PHYSICS_H\AdvancedPhysics\advancedCD.h">
       <Filter>Header Files\PHYSICS_H\AdvancedPhysics</Filter>
     </ClInclude>
-    <ClInclude Include="root\OGL_Application\include\IA.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="root\OGL_Application\include\ApplicationObject\applicationDerivedObject.h">
       <Filter>Header Files\ApplicationObject</Filter>
     </ClInclude>
@@ -321,6 +318,9 @@
     <ClInclude Include="root\OGL_Application\include\Objects\UI\userInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="root\OGL_Application\include\AI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include=".\root\OGL_Application\src\app.cpp">
@@ -369,9 +369,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="root\OGL_Application\src\timing.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="root\OGL_Application\src\IA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="root\OGL_Application\src\saveloadhelper\saveloadhelper.cpp">
@@ -427,12 +424,6 @@
     </ClCompile>
     <ClCompile Include="root\OGL_Application\src\Objects\gun.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="root\OGL_Application\src\Objects\characters\enemy.cpp">
-      <Filter>Source Files\characters</Filter>
-    </ClCompile>
-    <ClCompile Include="root\OGL_Application\src\Objects\characters\playerCharacter.cpp">
-      <Filter>Source Files\characters</Filter>
     </ClCompile>
     <ClCompile Include="root\OGL_Application\src\Physics\AdvancedPhysics\advancedCD.cpp">
       <Filter>Source Files\PHYSICS_SRC\AdvancedPhysics</Filter>
@@ -559,6 +550,15 @@
     </ClCompile>
     <ClCompile Include="root\OGL_Application\src\UI\userInterface.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="root\OGL_Application\src\AI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="root\OGL_Application\src\Objects\characters\enemy\enemy.cpp">
+      <Filter>Source Files\characters</Filter>
+    </ClCompile>
+    <ClCompile Include="root\OGL_Application\src\Objects\characters\playercharacter\playerCharacter.cpp">
+      <Filter>Source Files\characters</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
